--- a/design-system.html
+++ b/design-system.html
@@ -8,11 +8,8 @@
     <title>Document</title>
 </head>
 <body>
-    <button>
-        <article class="txt">
-            Bouton
-        </article>
-        
+    <button class="primary">
+        Bouton        
     </button>
 </body>
 </html>
