--- a/design-system.html
+++ b/design-system.html
@@ -8,7 +8,7 @@
     <title>Document</title>
 </head>
 <body>
-    <button class="primary">
+    <button class="button">
         Bouton        
     </button>
 </body>
