--- a/design-system.html
+++ b/design-system.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <button class="button">
-        Bouton        
+        <span class="text-base text-button">Bouton</span>        
     </button>
 </body>
 </html>
