--- a/design-system.html
+++ b/design-system.html
@@ -8,8 +8,8 @@
     <title>Document</title>
 </head>
 <body>
-    <button class="button">
-        <span class="text-base text-button">Bouton</span>        
+    <button class="button filtre">
+       Tout
     </button>
 </body>
 </html>
