--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <title>Next Clothes</title>
 </head>
 <body>
-<p>hello</p>
-    <H1>hello</H1>
-    Test
-</body>
-</html>
+    <button class="button_filtre">
+        Tout
+     </button>
+ </body>
+ </html>
