--- a/index.html
+++ b/index.html
@@ -11,5 +11,12 @@
     <button class="button_filtre">
         Tout
      </button>
+     <button class="tag">
+        Tags
+     </button>
+     <button class="tag2">
+        Tags
+     </button>
+
  </body>
  </html>
