bouton ajouter un tag

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Next Clothes</title>
+    <script src="script.js"></script>
+
 </head>
 <body>
     <button class="button_filtre">
@@ -17,6 +19,8 @@
      <button class="tag2">
         Tags
      </button>
+
+     <button id="editable-button" class="editable-button" contenteditable="true" onclick="clearText()">ajouter un tag</button>
 
  </body>
  </html>
