changement endroit boutons

--- a/design-system.html
+++ b/design-system.html
@@ -24,5 +24,17 @@
           </clipPath>
         </defs>
       </svg></button>
+      <button class="button_filtre">
+        Tout
+     </button>
+     <button class="tag">
+        Tags
+     </button>
+     <button class="tag2">
+        Tags
+     </button>
+
+     <button id="editable-button" class="editable-button" contenteditable="true" onclick="clearText()">ajouter un tag</button>
+
 </body>
 </html>
