--- a/design-system.html
+++ b/design-system.html
@@ -13,7 +13,8 @@
        Tout
     </button>
     
-    <button class="button loop"><svg xmlns="http://www.w3.org/2000/svg" width="35" height="35" fill="none" viewBox="0 0 35 35">
+    <button class="button loop">
+      <svg xmlns="http://www.w3.org/2000/svg" width="35" height="35" fill="none" viewBox="0 0 35 35">
         <g clip-path="url(#a)">
           <path fill="#fff" fill-opacity=".01" d="M35 0H0v35h35V0Z"/>
           <path stroke="#fff" stroke-linejoin="round" stroke-width="2" d="M15.313 27.709c6.845 0 12.395-5.55 12.395-12.396 0-6.846-5.55-12.396-12.395-12.396-6.846 0-12.396 5.55-12.396 12.396 0 6.846 5.55 12.396 12.396 12.396Z"/>
@@ -24,7 +25,10 @@
             <path fill="#fff" d="M0 0h35v35H0z"/>
           </clipPath>
         </defs>
-      </svg></button>
+      </svg>
+    </button>
+
+
       <button class="button_filtre">
         Tout
      </button>
@@ -43,8 +47,18 @@
       <input type="checkbox" id="sav1" aria-label="add a save">
     </div>
 
-    <button class="coins">
-      <article>24</article>
+    <button class="coins text-button">
+      <article>24</article> <div class="point"><svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" fill="none" viewBox="0 0 24 24">
+        <g clip-path="url(#a)">
+          <path fill="#fff" fill-opacity=".01" d="M24 0H0v24h24V0Z"/>
+          <path stroke="#392284" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M2 17v5h5m10 0h5v-5M17 2h5v5M7 2H2v5m6 10s1.5 1.5 4 1.5 4-1.5 4-1.5M12 7v4.5c0 1-1 2-2 2h-.5M17 7v1M7 7v1"/>
+        </g>
+        <defs>
+          <clipPath id="a">
+            <path fill="#fff" d="M0 0h24v24H0z"/>
+          </clipPath>
+        </defs>
+      </svg></div>
     </button>
 
      <button id="editable-button" class="editable-button" contenteditable="true" onclick="clearText()">
