--- a/design-system.html
+++ b/design-system.html
@@ -9,7 +9,7 @@
     <script src="script.js"></script>
 </head>
 <body>
-    <button class="button filtre">
+    <button class="button">
        Tout
     </button>
     
@@ -30,7 +30,7 @@
 
 
       <button class="button_filtre">
-        Tout
+        Toutdzf
      </button>
      <button class="tag">
         Tagoooooos
