--- a/design-system.html
+++ b/design-system.html
@@ -29,9 +29,13 @@
     </button>
 
 
-      <button class="button_filtre">
-        Toutdzf
-     </button>
+    <div class="text-button">
+      <button class="filtret"> Tout</button>
+     <button class="filtre">Femme</button>
+     <button class="filtre">Homme</button>
+     <button class="filtre">Enfants</button>
+    </div>
+    
      <button class="tag">
         Tagoooooos
      </button>
