--- a/design-system.html
+++ b/design-system.html
@@ -59,6 +59,9 @@
       </div>
     </article>
 
+    <img class="calendar" src="img/calendar.png" alt="Calendrier des réservations"/>
+    
+    
     <div class="save">
       <input type="checkbox" id="sav1" aria-label="add a save">
     </div>
