--- a/design-system.html
+++ b/design-system.html
@@ -573,6 +573,17 @@
       </button>
       </div>
     
+      <button class="iconw"><svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <path d="M15.5 2H8L5 13.5H9L7 22L20 8H14L15.5 2Z" fill="white" stroke="white" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+        </svg>
+        </button>
+        <button class="iconw"><svg width="36" height="36" viewBox="0 0 36 36" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <path d="M9 8.25H12.75L14.25 5.25H21.75L23.25 8.25H27V20.25H9V8.25Z" stroke="white" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+          <path d="M18 16.5C19.6569 16.5 21 15.1569 21 13.5C21 11.8431 19.6569 10.5 18 10.5C16.3431 10.5 15 11.8431 15 13.5C15 15.1569 16.3431 16.5 18 16.5Z" stroke="white" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+          <path d="M15 25.5L18 28.5L15 31.5" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+          <path d="M18 28.5C9.71572 28.5 3 25.1421 3 21C3 19.9334 3.44534 18.9187 4.24813 18" stroke="white" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+          <path d="M24 27.8759C29.2977 26.7186 33 24.0754 33 21C33 19.9334 32.5547 18.9187 31.7519 18" stroke="white" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+          </svg></button>
 
 
 
