image message plus barre
image de la messagerie + barre de message,

6éme bouton de impact

--- a/design-system.html
+++ b/design-system.html
@@ -581,6 +581,29 @@
           </svg>
         <article>Location dans un rayon moyen de 12km</article>
       </button>
+      
+      <button class="button2 impact3"> <div><svg width="74" height="27" viewBox="0 0 74 27" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <rect width="74" height="27" rx="5" fill="#472BA3"/>
+        <rect width="49" height="23" transform="translate(12.5 2)" fill="#472BA3"/>
+        <path d="M13.175 17.995L15.44 15.82C15.64 15.62 15.92 15.36 16.28 15.04C16.85 14.52 17.285 14.1 17.585 13.78C17.885 13.46 18.13 13.12 18.32 12.76C18.51 12.39 18.605 11.995 18.605 11.575C18.605 10.955 18.425 10.485 18.065 10.165C17.705 9.835 17.18 9.67 16.49 9.67C16.02 9.67 15.535 9.755 15.035 9.925C14.545 10.095 14.085 10.345 13.655 10.675V9.205C14.495 8.595 15.52 8.29 16.73 8.29C17.81 8.29 18.65 8.58 19.25 9.16C19.85 9.73 20.15 10.51 20.15 11.5C20.15 11.98 20.045 12.44 19.835 12.88C19.635 13.32 19.35 13.755 18.98 14.185C18.61 14.605 18.11 15.12 17.48 15.73L15.44 17.725H20.54V19H13.175V17.995ZM26.3908 16.42H21.2908V15.445L26.3758 8.515H27.9358V15.22H29.5558V16.42H27.9358V19H26.3908V16.42ZM26.5708 15.22V10.345L23.0158 15.22H26.5708Z" fill="white"/>
+        <circle cx="51" cy="13.5" r="10.5" fill="white"/>
+        <g clip-path="url(#clip0_685_5885)">
+        <path d="M45.7891 16.2236V18.7094H48.2749" stroke="#472BA3" stroke-width="1.05" stroke-linecap="round" stroke-linejoin="round"/>
+        <path d="M53.2471 18.7094H55.7329V16.2236" stroke="#472BA3" stroke-width="1.05" stroke-linecap="round" stroke-linejoin="round"/>
+        <path d="M53.2471 8.7666H55.7329V11.2524" stroke="#472BA3" stroke-width="1.05" stroke-linecap="round" stroke-linejoin="round"/>
+        <path d="M48.2749 8.7666H45.7891V11.2524" stroke="#472BA3" stroke-width="1.05" stroke-linecap="round" stroke-linejoin="round"/>
+        <path d="M48.7725 16.2236C48.7725 16.2236 49.5182 16.9694 50.7611 16.9694C52.004 16.9694 52.7497 16.2236 52.7497 16.2236" stroke="#472BA3" stroke-width="1.05" stroke-linecap="round" stroke-linejoin="round"/>
+        <path d="M50.7615 11.2529V13.4901C50.7615 13.9873 50.2643 14.4845 49.7671 14.4845H49.5186" stroke="#472BA3" stroke-width="1.05" stroke-linecap="round" stroke-linejoin="round"/>
+        <path d="M53.2471 11.2529V11.7501" stroke="#472BA3" stroke-width="1.05" stroke-linecap="round" stroke-linejoin="round"/>
+        <path d="M48.2754 11.2529V11.7501" stroke="#472BA3" stroke-width="1.05" stroke-linecap="round" stroke-linejoin="round"/>
+        </g>
+        <defs>
+        <clipPath id="clip0_685_5885">
+        <rect width="11.9318" height="11.9318" fill="white" transform="translate(44.7949 7.77246)"/>
+        </clipPath>
+        </defs>
+        </svg>
+      </div>Grâce à vos efforts vous bénéficier de 24 points</button>
       </div>
 
       
@@ -603,6 +626,13 @@
             <path d="M7.12467 7.12533L14.2497 3.16699H23.7497L30.8747 7.12533L34.0413 19.0003L27.708 23.7503V34.8337H10.2913V23.7503L3.95801 19.0003L7.12467 7.12533Z" stroke="#6333FF" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
             <path d="M15.52 20.934L17.314 19.283L18.172 18.516C18.6487 18.1 19.0083 17.7663 19.251 17.515C19.5023 17.2637 19.706 16.995 19.862 16.709C20.018 16.4143 20.096 16.098 20.096 15.76C20.096 15.266 19.9487 14.889 19.654 14.629C19.368 14.3603 18.9563 14.226 18.419 14.226C18.003 14.226 17.5697 14.304 17.119 14.46C16.677 14.6073 16.274 14.8197 15.91 15.097V13.524C16.664 12.9867 17.5913 12.718 18.692 12.718C19.6627 12.718 20.4167 12.978 20.954 13.498C21.4913 14.018 21.76 14.7287 21.76 15.63C21.76 16.0547 21.6777 16.4533 21.513 16.826C21.3483 17.19 21.1143 17.5453 20.811 17.892C20.5077 18.2387 20.096 18.6503 19.576 19.127L17.951 20.635H22.085V22H15.52V20.934Z" fill="#6333FF"/>
             </svg>
+            </button>
+
+            <img  src="img/message1.png" width="148" height="85" alt="Quand voulez vous réserver?"/>
+            <img  src="img/message2.png" width="148" height="100" alt="Les dates de réservations"/>
+            <img src="img/messagebarre.png" width="278" height="44" alt="Entrer du texte"/>
+            <button id="editable-button" class="editable-button" contenteditable="true" onclick="clearText()">
+              <img src="img/messagebarre.png" width="278" height="44" alt="Entrer du texte"/>
             </button>
 
 
