map + localisation img

--- a/design-system.html
+++ b/design-system.html
@@ -634,6 +634,8 @@
             <img  src="img/message1.png" width="148" height="85" alt="Quand voulez vous réserver?"/>
             <img  src="img/message2.png" width="148" height="100" alt="Les dates de réservations"/>
             <img src="img/messagebarre.png" width="278" height="44" alt="Entrer du texte"/>
+            <img src="img/map.png" width="280" height="313" alt="Entrer du texte"/>
+            <img src="img/localisation.png" width="48" height="75" alt="Entrer du texte"/>
             
 
 
