--- a/design-system.html
+++ b/design-system.html
@@ -62,13 +62,22 @@
         </div>
       </div>
     </article>
-    <div class="résa">
-      <img class="calendar" src="img/calendar.png" alt="Calendrier des réservations"/>
+    <div class="text-base text-button résa">
+      <div class="select">
+        <img class="calendar" src="img/calendar.png" alt="Calendrier des réservations"/>
+        <div class="date frectangle"><p>20</p></div>
+        <div class="date d1"><input type="checkbox" id="date"></div>
+        <div class="date d2"><input type="checkbox" id="dat2">
+          <button class="text-tag buttonR rés" id="réservation">
+            Réservation
+          </button>
+        </div>
+      </div>
       <div class="text-base disponibility">
         <div class="state"></div>
         <span class="text-button dispo">Non disponible</span>
       </div>
-      <a href="#"></a>
+      <a href="#">
         <button class="text-button button">
           Contacter
         </button>
