green home page

--- a/design-system.html
+++ b/design-system.html
@@ -41,10 +41,10 @@
      <button class="filtre">Enfants</button>
     </div>
     
-     <button class="tag">
+     <button class="text-base text-tag tag">
         Tagoooooos
     </button>
-    <button class="tag2">
+    <button class="text-base text-tag tag2">
         Tags
     </button>
     <!-- Card vêtement -->
