--- a/scan-search.html
+++ b/scan-search.html
@@ -4,12 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style-home-green.css">
+    <link rel="stylesheet" href="style-scan-search.css">
     <script src="script.js"></script>
 </head>
 <body>
+    <span class="title">
+      <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
+        <path stroke="#000" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M17.577 5.876 5.86 17.56M5.85 5.85l11.702 11.702"/>
+      </svg>
+      <h1 class="text-base text-title">Vêtement scanné</h1>
+    </span>
     
 
+    <img class="scanned" src="img/Scan.gif" alt="">
 
     <span class="TAGbar">
         <button class="text-base text-tag tag">
@@ -73,12 +80,12 @@
         <p>10 km</p>
     </span>
 
+    <h2 class="text-base text-button2 results">Articles similaires</h2>
     <section class="gridcard">
-        <h2 class="text-base text-button2 results">Résultats</h2>
         <!-- Card vêtement -->
         <article class="card c1">
         <!-- Image du vêtement -->
-          <div class="img green1"></div>
+          <div class="img orange1"></div>
         <!-- Valeur du vêtement -->
           <div class="bottom">
             <div class="valueclothe text-base text-button">77</div>
@@ -92,7 +99,7 @@
         </article>
         <article class="card c2">
             <!-- Image du vêtement -->
-              <div class="img green2"></div>
+              <div class="img orange2"></div>
             <!-- Valeur du vêtement -->
               <div class="bottom">
                 <div class="valueclothe text-base text-button">77</div>
@@ -106,7 +113,7 @@
         </article>
         <article class="card c3">
             <!-- Image du vêtement -->
-            <div class="img green3"></div>
+            <div class="img orange3"></div>
             <!-- Valeur du vêtement -->
             <div class="bottom">
                 <div class="valueclothe text-base text-button">77</div>
@@ -120,7 +127,7 @@
         </article>
         <article class="card c4">
             <!-- Image du vêtement -->
-            <div class="img green4"></div>
+            <div class="img orange4"></div>
             <!-- Valeur du vêtement -->
             <div class="bottom">
                 <div class="valueclothe text-base text-button">77</div>
@@ -134,7 +141,7 @@
         </article>
         <article class="card c5">
             <!-- Image du vêtement -->
-            <div class="img green5"></div>
+            <div class="img orange5"></div>
             <!-- Valeur du vêtement -->
             <div class="bottom">
                 <div class="valueclothe text-base text-button">77</div>
@@ -148,35 +155,7 @@
         </article>
         <article class="card c6">
             <!-- Image du vêtement -->
-            <div class="img green6"></div>
-            <!-- Valeur du vêtement -->
-            <div class="bottom">
-                <div class="valueclothe text-base text-button">77</div>
-            <!-- Nom du vêtement -->
-                <span class="name text-base text-body">Vêtement</span>
-            <!-- Like -->
-                <div class="like">
-                  <input type="checkbox" id="lik1" aria-label="add a like">
-                </div>
-            </div>
-        </article>
-        <article class="card c7">
-            <!-- Image du vêtement -->
-            <div class="img green7"></div>
-            <!-- Valeur du vêtement -->
-            <div class="bottom">
-                <div class="valueclothe text-base text-button">77</div>
-            <!-- Nom du vêtement -->
-                <span class="name text-base text-body">Vêtement</span>
-            <!-- Like -->
-                <div class="like">
-                  <input type="checkbox" id="lik1" aria-label="add a like">
-                </div>
-            </div>
-        </article>
-        <article class="card c8">
-            <!-- Image du vêtement -->
-            <div class="img green8"></div>
+            <div class="img orange6"></div>
             <!-- Valeur du vêtement -->
             <div class="bottom">
                 <div class="valueclothe text-base text-button">77</div>
