suite page article

--- a/page-article.html
+++ b/page-article.html
@@ -83,6 +83,11 @@
         </div>
       </div>
 
+      <!-- Card vêtement -->
+    <article class="card">
+    <!-- Image du vêtement -->
+        <div class="img orange4"></div>
+
 </head>
 <body>
     
