--- a/page-ouverture.html
+++ b/page-ouverture.html
@@ -8,7 +8,29 @@
     <link rel="stylesheet" href="page-ouverture.css">
 </head>
 <body>
-    <img class="dame" src="img/dameverte.png" width="320" height="422" />
+    <img class="dame" src="img/dameverte.png" width="320" height="349" />
+    
+    <img class="vivez" src="img/texteouverture.png" width="273" height="80" />
+
+    <button class="decouverte text-button button">
+        Découvrir le vert !
+     </button>
+      <!-- BUTTON SECONDARY -->
+    <button class="recherche text-button button2">
+        Faire ma propre recherche
+        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <g clip-path="url(#clip0_473_5557)">
+            <path d="M24 0H0V24H24V0Z" fill="white" fill-opacity="0.01"/>
+            <path d="M12 21V3" stroke="#6333FF" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+            <path d="M18 15L12 21L6 15" stroke="#6333FF" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+            </g>
+            <defs>
+            <clipPath id="clip0_473_5557">
+            <rect width="24" height="24" fill="white"/>
+            </clipPath>
+            </defs>
+            </svg>            
+     </button>
     
 </body>
 </html>
